--- a/src/app/layout.css
+++ b/src/app/layout.css
@@ -1,14 +1,14 @@
 /* ----- 0. Fonts ----- */
 @font-face {
   font-family: "Inter";
-  src: url("../_fonts/Inter-VariableFont_opsz,wght.ttf") format("truetype");
+  src: url("./_fonts/Inter-VariableFont_opsz,wght.ttf") format("truetype");
   font-weight: 100 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Inter";
-  src: url("../_fonts/Inter-Italic-VariableFont_opsz,wght.ttf") format("truetype");
+  src: url("./_fonts/Inter-Italic-VariableFont_opsz,wght.ttf") format("truetype");
   font-weight: 100 900;
   font-style: italic;
 }
